# Eric_Ortega_Rodriguez_Individual_Project_2

./: Cargo.toml  README.md  requirements.txt
.github/workflows/: cicd.yml
data/: avengers.csv  avengers.db
rust_cli_binary/: Cargo.toml  Makefile  cargo.toml
rust_cli_binary/data/: avengers.csv  avengers.db  test_query.csv  test_trans_load.csv
rust_cli_binary/src/: lib.rs  main.rs
rust_cli_binary/tests/: test.rs
src/: lib.rs  main.rs
