[package]
name = "rust_cli_binary"
version = "0.1.0"
edition = "2021"

# Metadata for creating a library
[lib]
name = "mylib"           # Library name; matches package by default
path = "src/lib.rs"
crate-type = ["lib"]     # Defines it as a library crate

# Dependencies
[dependencies]
rand = "0.8.5"           # Random number generation
csv = "1.3.0"            # CSV file manipulation
serde = { version = "1.0", features = ["derive"] } # Serialization
rusqlite = "0.29.0"      # SQLite interaction
lazy_static = "1.4.0"    # Runtime-defined static data
reqwest = { version = "0.11.22", features = ["blocking", "json"] }


